Fix: Overlapping share icons in mobile

--- a/app/assets/styles-sass/gui/components/_widgets.scss
+++ b/app/assets/styles-sass/gui/components/_widgets.scss
@@ -30,8 +30,12 @@
 
 .share-widget {
     .article-footer & {
-        @include center-vertical();
-        right: 0;
+        padding-bottom: 0;
+
+        @media screen and (min-width: 600px) {
+            @include center-vertical();
+            right: 0;
+        }
     }
 }
 
